# logger

./: .dir-locals.el  .gitignore  README.md  __init__.py  environment_grok.yml  pyproject.toml  tree.txt
src/logger/: __init__.py  __init__.pyi  core.py  core.pyi  log_spec.py  log_spec.pyi  logger.pyi
tests/: conftest.py  createLogTable.sql  tests.py
