[project]
name = "logger"
version = "0.1.0"
authors = [
  {name = "Simon Watson", email = "SIMON_WATSON_SJW@HOTMAIL.com"}
]
maintainers = [
  {name = "Simon Watson", email = "SIMON_WATSON_SJW@HOTMAIL.com"}
]
description = "Custom logging module with file rotation, gzip compression, and optional PostgreSQL integration."
keywords = ["logging", "rotation", "gzip", "postgresql", "asyncpg"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv",
  "asyncpg",
]

[tool.basedpyright]
# basedpyright settings
# ---------------------
typeCheckingMode = "recommended"                   # The recommended setting collection.
pythonVersion = "3.12"
pythonPlatform = "Linux"
defineConstant = { LOG_FILE_PATH = true }          # Indicates LOG_FILE_PATH is defined; add others like LOG_MAX_SIZE if needed
reportAny = false                                  # Don't flag types set to Any.
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = true
reportUnknownParameterType = true
reportMissingParameterType = true

[tool.ruff]
# ruff settings
# -------------
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "COM812", "ISC001", "D212"]
task-tags = ["TODO", "FIXME", "XXX"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
